--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="es"> <!--Autor: Esteban Vladimir Alvarenga Gutiérrez (Ig: @alvarenga_144) -->
+<html lang="es">
+<!--Autor: Esteban Vladimir Alvarenga Gutiérrez (Ig: @alvarenga_144) -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon Light</title>
+    <title>Moon Light - Landing Page</title>
     <link rel="icon" href="img/gato.ico">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <a href="" class="logo">Alva'144</a>
+        <a href="" class="logo">Alvarenga144</a>
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
@@ -27,38 +29,28 @@
         <img src="img/mountains_front.png" id="mountains_front">
     </section>
     <div class="sec" id="sec">
-        <h2>Que pedo pues Maje ¡SACATE LA SODA!</h2>
-        <p>Aquí empieza el típico pedazo que lleva palabras latinas que dice LOREM IMPSUN Y ESA COSA. Muchas Gracias por visitar nuestra pagina, Actualmente se encuentra en desarrollo 👍.<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-        <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error dolores.
-        </div>
-
-
-    <script>
-        let stars = document.getElementById('stars');
-        let Moon = document.getElementById('moon');
-        let mountains_behind = document.getElementById('mountains_behind');
-        let text = document.getElementById('text');
-        let btn = document.getElementById('btn');
-        let mountains_front = document.getElementById('mountains_front');
-        let header = document.querySelector('header');
-
-        window.addEventListener('scroll', function(){
-            let value = window.scrollY;
-            stars.style.left = value * 0.25 + 'px';
-            moon.style.top = value * 0.90 + 'px';
-            mountains_behind.style.top = value * 0.5 + 'px';
-            mountains_front.style.top = value * 0 + 'px';
-            text.style.marginRight = value * 4 + 'px';
-            text.style.marginTop = value * 1 + 'px';
-            btn.style.marginTop = value * 1 + 'px';
-            header.style.top = value * 0.6 + 'px';
-        })
-    </script>
-    
+        <h2>Smoth landing page, Moon Light Theme</h2>
+        <p> Muchas Gracias por visitar nuestra pagina, Actualmente se encuentra en desarrollo
+            👍.<br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt
+            fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error
+            dolores.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt
+            fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error
+            dolores.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt
+            fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error
+            dolores.
+            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique
+            sunt fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic
+            error dolores.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt
+            fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error
+            dolores.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab sapiente ullam sint qui similique sunt
+            fugit debitis, doloribus necessitatibus quaerat ipsum rerum consectetur recusandae. Vitae quidem hic error
+            dolores.
+    </div>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
